etc/kubernetes/manifests/hasher-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: santander-dockercoins-hasher-deploy
spec:
  selector:
    matchLabels:
      app: santander-dockercoins-hasher
  replicas: 3
  template:
    metadata:
      labels:
        app: santander-dockercoins-hasher
    spec:
      containers:
        - name: santander-dockercoins-hasher-container
          args:
            - hasher.rb
          command:
            - irb
          image: ganimedescolomar/santander-dockercoins:1.1-hasher
          volumeMounts:
            -
              mountPath: /src/
              name: santander-dockercoins-hasher-volume
              readOnly: true
          workingDir: /src/
      volumes:
        -
          name: santander-dockercoins-hasher-volume
          emptyDir: {}
