etc/kubernetes/manifests/rng-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: santander-dockercoins-hasher-deploy
spec:
  selector:
    matchLabels:
      app: santander-dockercoins-hasher
  replicas: 3
  template:
    metadata:
      labels:
        app: santander-dockercoins-rng
    spec:
      containers:
        - name: santander-dockercoins-rng-container
          args:
            - rng.py
          command:
            - python
          image: ganimedescolomar/santander-dockercoins:1.1-rng
          volumeMounts:
            -
              mountPath: /src/
              name: santander-dockercoins-rng-volume
              readOnly: true
          workingDir: /src/
      volumes:
        -
          name: santander-dockercoins-rng-volume
          emptyDir: {}
