etc/kubernetes/manifests/worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: santander-dockercoins-worker-deploy
spec:
  selector:
    matchLabels:
      app: santander-dockercoins-worker
  replicas: 3
  template:
    metadata:
      labels:
        app: santander-dockercoins-worker
    spec:
      containers:
        - name: santander-dockercoins-worker-container
          args:
            - worker.py
          command:
            - python
          image: ganimedescolomar/santander-dockercoins:1.1-worker
          volumeMounts:
            -
              mountPath: /src/
              name: santander-dockercoins-worker-volume
              readOnly: true
          workingDir: /src/
      volumes:
        -
          name: santander-dockercoins-worker-volume
          emptyDir: {}
