etc/kubernetes/manifests/hasher-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hasher-netpol
spec:
  ingress: 
    -
      from: 
        -
          namespaceSelector:
            matchLabels:
              name: santander-dockercoins
        -
          podSelector:
            matchLabels:
              app: worker-label
      ports:
        -
          port: 8080
          protocol: TCP
  podSelector: 
    matchLabels:
      app: hasher-label
  policyTypes:
    - Ingress
